# fastapi-template

./: .flake8  .gitignore  logging.yaml  pre-push.sh  pyproject.toml  requirements-dev.txt  requirements.txt
app/: main.py
app/api/: audit.py  base.py
app/api/auth/: models.py  routers.py  schemas.py
app/core/: celery_app.py  config.py  security.py
app/db/: __init__.py  db_mixin.py  db_session.py  redis_session.py
app/register/: exception_handler.py  routers.py
app/utils/: async_http_req.py  error_code.py  exceptions.py  json_loggers.py  loggers.py  loggers_v2.py
migrations/: env.py
