[tool.poetry]
name = "fastapi-backend"
version = "0.1.0"
description = "fastapi backend template project"
authors = ["wangxin.jeffry <wangxin.jeffry@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.1"
celery = "^5.2.7"
uvicorn = "^0.19.0"
toml = "^0.10.2"
PyJWT = "^2.6.0"
python-multipart = "^0.0.5"
passlib = "^1.7.4"
python-json-logger = "^2.0.4"
prometheus-fastapi-instrumentator = "^5.9.1"
asgi-correlation-id = "^3.2.0"
loguru = "^0.6.0"
gunicorn = "^20.1.0"
sqlalchemy = "^1.4.42"
orjson = "^3.8.1"
redis = "^4.3.4"

[tool.poetry.dev-dependencies]
autoflake = "^1.4"
black = "^22.6.0"
isort = "^5.10.1"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"